@@ -16,11 +16,11 @@
 package org.gradle.launcher.daemon.client;
 
 import org.gradle.api.internal.classpath.DefaultModuleRegistry;
-import org.gradle.initialization.DefaultCommandLineConverter;
-import org.gradle.launcher.daemon.server.DaemonIdleTimeout;
+import org.gradle.launcher.daemon.registry.DaemonDir;
 import org.gradle.launcher.daemon.bootstrap.GradleDaemon;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
+import org.gradle.util.GradleVersion;
 import org.gradle.util.Jvm;
 import org.gradle.util.GUtil;
 import org.gradle.api.GradleException;
@@ -37,11 +37,13 @@ public class DaemonStarter implements Runnable {
 
     private static final Logger LOGGER = Logging.getLogger(DaemonStarter.class);
 
-    private final File userHomeDir;
+    private final DaemonDir daemonDir;
+    private final List<String> daemonOpts;
     private final int idleTimeout;
 
-    public DaemonStarter(File userHomeDir, int idleTimeout) {
-        this.userHomeDir = userHomeDir;
+    public DaemonStarter(DaemonDir daemonDir, List<String> daemonOpts, int idleTimeout) {
+        this.daemonDir = daemonDir;
+        this.daemonOpts = daemonOpts;
         this.idleTimeout = idleTimeout;
     }
 
@@ -59,26 +61,23 @@ public class DaemonStarter implements Runnable {
 
         List<String> daemonArgs = new ArrayList<String>();
         daemonArgs.add(Jvm.current().getJavaExecutable().getAbsolutePath());
-        daemonArgs.add("-Xmx1024m");
-        daemonArgs.add("-XX:MaxPermSize=256m");
-        daemonArgs.add("-XX:MaxPermSize=256m");
+        LOGGER.info("Setting GRADLE_DAEMON_OPTS: {}", daemonOpts);
+        daemonArgs.addAll(daemonOpts);
         //Useful for debugging purposes - simply uncomment and connect to debug
 //        daemonArgs.add("-Xdebug");
 //        daemonArgs.add("-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006");
         daemonArgs.add("-cp");
         daemonArgs.add(GUtil.join(bootstrapClasspath, File.pathSeparator));
         daemonArgs.add(GradleDaemon.class.getName());
-        daemonArgs.add(String.format("-%s", DefaultCommandLineConverter.GRADLE_USER_HOME));
-        daemonArgs.add(userHomeDir.getAbsolutePath());
+        daemonArgs.add(GradleVersion.current().getVersion());
+        daemonArgs.add(daemonDir.getBaseDir().getAbsolutePath());
+        daemonArgs.add(String.valueOf(idleTimeout));
 
-        DaemonIdleTimeout idleTimeout = new DaemonIdleTimeout(System.getenv("GRADLE_OPTS"), this.idleTimeout);
-        daemonArgs.add(idleTimeout.toSysArg());
-
-        LOGGER.info("starting daemon process: workingDir = {}, daemonArgs: {}", userHomeDir, daemonArgs);
-        startProcess(daemonArgs, userHomeDir);
+        startProcess(daemonArgs, daemonDir.getVersionedDir());
     }
 
     private void startProcess(List<String> args, File workingDir) {
+        LOGGER.info("Starting daemon process: workingDir = {}, daemonArgs: {}", workingDir, args);
         try {
             workingDir.mkdirs();
             if (OperatingSystem.current().isWindows()) {
@@ -91,9 +90,7 @@ public class DaemonStarter implements Runnable {
 
                 new WindowsProcessStarter().start(workingDir, commandLine.toString());
             } else {
-                ProcessBuilder builder = new ProcessBuilder(args);
-                builder.directory(workingDir);
-                Process process = builder.start();
+                Process process = new ProcessBuilder(args).directory(workingDir).start();
                 process.getOutputStream().close();
                 process.getErrorStream().close();
                 process.getInputStream().close();
